--- a/spark-in-dark/pom.xml
+++ b/spark-in-dark/pom.xml
@@ -91,6 +91,16 @@
             <artifactId>mahout-integration</artifactId>
         </dependency>
 
+        <!-- Lucene -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+        </dependency>
+
         <!-- Web Crawler -->
         <dependency>
             <groupId>edu.uci.ics</groupId>
@@ -153,6 +163,12 @@
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
                                     </excludes>
+                                </filter>
+                                <filter>
+                                    <artifact>org.apache.lucene:lucene-core</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>
                                 </filter>
                             </filters>
                         </configuration>
